--- a/.config
+++ b/.config
@@ -2791,7 +2791,7 @@ CONFIG_PACKAGE_kmod-rfkill=y
 # CONFIG_PACKAGE_kmod-softdog is not set
 CONFIG_PACKAGE_kmod-ssb=y
 CONFIG_PACKAGE_kmod-thermal=y
-CONFIG_PACKAGE_kmod-tpm=y		 
+CONFIG_PACKAGE_kmod-tpm=y
 # CONFIG_PACKAGE_kmod-tpm-i2c-atmel is not set
 # CONFIG_PACKAGE_kmod-tpm-i2c-infineon is not set
 # CONFIG_PACKAGE_kmod-zram is not set
@@ -3114,8 +3114,8 @@ CONFIG_PACKAGE_kmod-rtl8192de=y
 CONFIG_PACKAGE_kmod-rtl8192se=y
 CONFIG_PACKAGE_kmod-rtl8723bs=y
 CONFIG_PACKAGE_kmod-rtl8723du=y
-CONFIG_PACKAGE_kmod-rtl8812au-ac=m
-CONFIG_PACKAGE_kmod-rtl8812au-ct=y
+CONFIG_PACKAGE_kmod-rtl8812au-ac=y
+# CONFIG_PACKAGE_kmod-rtl8812au-ct is not set
 CONFIG_PACKAGE_kmod-rtl8821ae=y
 CONFIG_PACKAGE_kmod-rtl8821cu=y
 CONFIG_PACKAGE_kmod-rtl8822bu=y
@@ -5147,7 +5147,7 @@ CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-tailscale-zh_Hans is not set
 # CONFIG_PACKAGE_luci-i18n-tailscale-zh_Hant is not set
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y 
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-ca is not set
 # CONFIG_PACKAGE_luci-i18n-upnp-cs is not set
@@ -6528,6 +6528,7 @@ CONFIG_PACKAGE_parted=y
 CONFIG_PARTED_READLINE=y
 CONFIG_PARTED_LVM2=y
 # end of Configuration
+
 CONFIG_PACKAGE_partx-utils=y
 # CONFIG_PACKAGE_sfdisk is not set
 # CONFIG_PACKAGE_sgdisk is not set
