--- a/.config
+++ b/.config
@@ -2790,7 +2790,7 @@ CONFIG_PACKAGE_kmod-rfkill=y
 # CONFIG_PACKAGE_kmod-serial-8250-exar is not set
 # CONFIG_PACKAGE_kmod-softdog is not set
 CONFIG_PACKAGE_kmod-ssb=y
-CONFIG_PACKAGE_kmod-thermal=y
+CONFIG_PACKAGE_kmod-thermal=m
 CONFIG_PACKAGE_kmod-tpm=y
 # CONFIG_PACKAGE_kmod-tpm-i2c-atmel is not set
 # CONFIG_PACKAGE_kmod-tpm-i2c-infineon is not set
@@ -2830,6 +2830,7 @@ CONFIG_PACKAGE_kmod-usb-core=y
 # CONFIG_PACKAGE_kmod-usb-dwc2 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc2-pci is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
+CONFIG_PACKAGE_kmod-usb-ehci=y
 # CONFIG_PACKAGE_kmod-usb-gadget-cdc-composite is not set
 # CONFIG_PACKAGE_kmod-usb-gadget-ehci-debug is not set
 # CONFIG_PACKAGE_kmod-usb-gadget-eth is not set
@@ -2903,10 +2904,11 @@ CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
 # CONFIG_PACKAGE_kmod-usb-uhci is not set
 CONFIG_PACKAGE_kmod-usb-wdm=y
+CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 # CONFIG_PACKAGE_kmod-usb-yealink is not set
-# CONFIG_PACKAGE_kmod-usb2 is not set
+CONFIG_PACKAGE_kmod-usb2=y
 # CONFIG_PACKAGE_kmod-usb2-pci is not set
-# CONFIG_PACKAGE_kmod-usb3 is not set
+CONFIG_PACKAGE_kmod-usb3=y
 # CONFIG_PACKAGE_kmod-usbip is not set
 # CONFIG_PACKAGE_kmod-usbip-client is not set
 # CONFIG_PACKAGE_kmod-usbip-server is not set
@@ -2984,37 +2986,37 @@ CONFIG_PACKAGE_kmod-usb-wdm=y
 #
 # Wireless Drivers
 #
-CONFIG_PACKAGE_kmod-ar5523=y
+CONFIG_PACKAGE_kmod-ar5523=m
 CONFIG_PACKAGE_kmod-ath=y
 CONFIG_ATH_USER_REGD=y
 # CONFIG_PACKAGE_ATH_DEBUG is not set
 CONFIG_PACKAGE_ATH_DFS=y
 # CONFIG_PACKAGE_ATH_DYNACK is not set
-CONFIG_PACKAGE_kmod-ath10k=y
+CONFIG_PACKAGE_kmod-ath10k=m
 CONFIG_ATH10K_LEDS=y
 CONFIG_ATH10K_THERMAL=y
-CONFIG_PACKAGE_kmod-ath10k-ct=y
+CONFIG_PACKAGE_kmod-ath10k-ct=m
 CONFIG_ATH10K-CT_LEDS=y
-CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=y
-CONFIG_PACKAGE_kmod-ath10k-pci=y
-CONFIG_PACKAGE_kmod-ath10k-sdio=y
-CONFIG_PACKAGE_kmod-ath10k-smallbuffers=y
-CONFIG_PACKAGE_kmod-ath11k=y
+CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=m
+CONFIG_PACKAGE_kmod-ath10k-pci=m
+CONFIG_PACKAGE_kmod-ath10k-sdio=m
+CONFIG_PACKAGE_kmod-ath10k-smallbuffers=m
+CONFIG_PACKAGE_kmod-ath11k=m
 CONFIG_ATH11K_THERMAL=y
-CONFIG_PACKAGE_kmod-ath11k-pci=y
-CONFIG_PACKAGE_kmod-ath5k=y
-CONFIG_PACKAGE_kmod-ath6kl=y
-CONFIG_PACKAGE_kmod-ath6kl-sdio=y
-CONFIG_PACKAGE_kmod-ath6kl-usb=y
+CONFIG_PACKAGE_kmod-ath11k-pci=m
+CONFIG_PACKAGE_kmod-ath5k=m
+CONFIG_PACKAGE_kmod-ath6kl=m
+CONFIG_PACKAGE_kmod-ath6kl-sdio=m
+CONFIG_PACKAGE_kmod-ath6kl-usb=m
 CONFIG_PACKAGE_kmod-ath9k=y
 CONFIG_ATH9K_HWRNG=y
 CONFIG_ATH9K_SUPPORT_PCOEM=y
 CONFIG_ATH9K_TX99=y
 CONFIG_PACKAGE_kmod-ath9k-common=y
-CONFIG_PACKAGE_kmod-ath9k-htc=y
-CONFIG_PACKAGE_kmod-b43=y
-CONFIG_PACKAGE_B43_USE_SSB=y
-CONFIG_PACKAGE_B43_USE_BCMA=y
+CONFIG_PACKAGE_kmod-ath9k-htc=m
+CONFIG_PACKAGE_kmod-b43=m
+CONFIG_PACKAGE_B43_USE_SSB=m
+CONFIG_PACKAGE_B43_USE_BCMA=m
 # CONFIG_B43_FW_4_150 is not set
 # CONFIG_B43_FW_4_178 is not set
 # CONFIG_B43_FW_5_10 is not set
@@ -3033,107 +3035,109 @@ CONFIG_PACKAGE_B43_PHY_G=y
 CONFIG_PACKAGE_B43_PHY_N=y
 CONFIG_PACKAGE_B43_PHY_LP=y
 CONFIG_PACKAGE_B43_PHY_HT=y
-CONFIG_PACKAGE_kmod-brcmfmac=y
+CONFIG_PACKAGE_kmod-brcmfmac=m
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
 CONFIG_BRCMFMAC_PCIE=y
-CONFIG_PACKAGE_kmod-brcmsmac=y
+CONFIG_PACKAGE_kmod-brcmsmac=m
 CONFIG_BRCMSMAC_USE_FW_FROM_WL=y
-CONFIG_PACKAGE_kmod-brcmutil=y
+CONFIG_PACKAGE_kmod-brcmutil=m
 # CONFIG_PACKAGE_BRCM80211_DEBUG is not set
-CONFIG_PACKAGE_kmod-carl9170=y
+CONFIG_PACKAGE_kmod-carl9170=m
 CONFIG_PACKAGE_kmod-cfg80211=y
 # CONFIG_PACKAGE_CFG80211_TESTMODE is not set
-# CONFIG_PACKAGE_kmod-iwlwifi is not set
+CONFIG_PACKAGE_kmod-iwlwifi=m
+# CONFIG_PACKAGE_IWLWIFI_DEBUG is not set
+# CONFIG_PACKAGE_IWLWIFI_DEBUGFS is not set
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_MAC80211_DEBUGFS=y
 # CONFIG_PACKAGE_MAC80211_TRACING is not set
 CONFIG_PACKAGE_MAC80211_MESH=y
-CONFIG_PACKAGE_kmod-mac80211-hwsim=y
-CONFIG_PACKAGE_kmod-mt76=y
-CONFIG_PACKAGE_kmod-mt76-connac=y
-CONFIG_PACKAGE_kmod-mt76-core=y
-CONFIG_PACKAGE_kmod-mt76-sdio=y
-CONFIG_PACKAGE_kmod-mt76-usb=y
-CONFIG_PACKAGE_kmod-mt7601u=y
-CONFIG_PACKAGE_kmod-mt7603=y
-CONFIG_PACKAGE_kmod-mt7615-common=y
-CONFIG_PACKAGE_kmod-mt7615-firmware=y
-CONFIG_PACKAGE_kmod-mt7615e=y
-CONFIG_PACKAGE_kmod-mt7622-firmware=y
-CONFIG_PACKAGE_kmod-mt7663-firmware-ap=y
-CONFIG_PACKAGE_kmod-mt7663-firmware-sta=y
-CONFIG_PACKAGE_kmod-mt7663-usb-sdio=y
-CONFIG_PACKAGE_kmod-mt7663s=y
-CONFIG_PACKAGE_kmod-mt7663u=y
-CONFIG_PACKAGE_kmod-mt76x0-common=y
-CONFIG_PACKAGE_kmod-mt76x02-common=y
-CONFIG_PACKAGE_kmod-mt76x02-usb=y
-CONFIG_PACKAGE_kmod-mt76x0e=y
-CONFIG_PACKAGE_kmod-mt76x0u=y
-CONFIG_PACKAGE_kmod-mt76x2=y
-CONFIG_PACKAGE_kmod-mt76x2-common=y
-CONFIG_PACKAGE_kmod-mt76x2u=y
-CONFIG_PACKAGE_kmod-mt7915-firmware=y
-CONFIG_PACKAGE_kmod-mt7915e=y
-CONFIG_PACKAGE_kmod-mt7916-firmware=y
-CONFIG_PACKAGE_kmod-mt7921-common=y
-CONFIG_PACKAGE_kmod-mt7921-firmware=y
-CONFIG_PACKAGE_kmod-mt7921e=y
-CONFIG_PACKAGE_kmod-mt7921s=y
-CONFIG_PACKAGE_kmod-mt7921u=y
-CONFIG_PACKAGE_kmod-mt7922-firmware=y
-CONFIG_PACKAGE_kmod-mt7925-common=y
-CONFIG_PACKAGE_kmod-mt7925e=y
-CONFIG_PACKAGE_kmod-mt7925u=y
-CONFIG_PACKAGE_kmod-mt792x-common=y
-CONFIG_PACKAGE_kmod-mt792x-usb=y
-CONFIG_PACKAGE_kmod-mt7996-firmware=y
-CONFIG_PACKAGE_kmod-mt7996e=y
-CONFIG_PACKAGE_kmod-mwifiex-pcie=y
-CONFIG_PACKAGE_kmod-mwifiex-sdio=y
-CONFIG_PACKAGE_kmod-mwl8k=y
-CONFIG_PACKAGE_kmod-owl-loader=y
-CONFIG_PACKAGE_kmod-rsi91x=y
-CONFIG_PACKAGE_kmod-rsi91x-sdio=y
-CONFIG_PACKAGE_kmod-rsi91x-usb=y
-CONFIG_PACKAGE_kmod-rt2800-lib=y
-CONFIG_PACKAGE_kmod-rt2800-mmio=y
-CONFIG_PACKAGE_kmod-rt2800-pci=y
-CONFIG_PACKAGE_kmod-rt2800-usb=y
-CONFIG_PACKAGE_kmod-rt2x00-lib=y
+CONFIG_PACKAGE_kmod-mac80211-hwsim=m
+CONFIG_PACKAGE_kmod-mt76=m
+CONFIG_PACKAGE_kmod-mt76-connac=m
+CONFIG_PACKAGE_kmod-mt76-core=m
+CONFIG_PACKAGE_kmod-mt76-sdio=m
+CONFIG_PACKAGE_kmod-mt76-usb=m
+CONFIG_PACKAGE_kmod-mt7601u=m
+CONFIG_PACKAGE_kmod-mt7603=m
+CONFIG_PACKAGE_kmod-mt7615-common=m
+CONFIG_PACKAGE_kmod-mt7615-firmware=m
+CONFIG_PACKAGE_kmod-mt7615e=m
+CONFIG_PACKAGE_kmod-mt7622-firmware=m
+CONFIG_PACKAGE_kmod-mt7663-firmware-ap=m
+CONFIG_PACKAGE_kmod-mt7663-firmware-sta=m
+CONFIG_PACKAGE_kmod-mt7663-usb-sdio=m
+CONFIG_PACKAGE_kmod-mt7663s=m
+CONFIG_PACKAGE_kmod-mt7663u=m
+CONFIG_PACKAGE_kmod-mt76x0-common=m
+CONFIG_PACKAGE_kmod-mt76x02-common=m
+CONFIG_PACKAGE_kmod-mt76x02-usb=m
+CONFIG_PACKAGE_kmod-mt76x0e=m
+CONFIG_PACKAGE_kmod-mt76x0u=m
+CONFIG_PACKAGE_kmod-mt76x2=m
+CONFIG_PACKAGE_kmod-mt76x2-common=m
+CONFIG_PACKAGE_kmod-mt76x2u=m
+CONFIG_PACKAGE_kmod-mt7915-firmware=m
+CONFIG_PACKAGE_kmod-mt7915e=m
+CONFIG_PACKAGE_kmod-mt7916-firmware=m
+CONFIG_PACKAGE_kmod-mt7921-common=m
+CONFIG_PACKAGE_kmod-mt7921-firmware=m
+CONFIG_PACKAGE_kmod-mt7921e=m
+CONFIG_PACKAGE_kmod-mt7921s=m
+CONFIG_PACKAGE_kmod-mt7921u=m
+CONFIG_PACKAGE_kmod-mt7922-firmware=m
+CONFIG_PACKAGE_kmod-mt7925-common=m
+CONFIG_PACKAGE_kmod-mt7925e=m
+CONFIG_PACKAGE_kmod-mt7925u=m
+CONFIG_PACKAGE_kmod-mt792x-common=m
+CONFIG_PACKAGE_kmod-mt792x-usb=m
+CONFIG_PACKAGE_kmod-mt7996-firmware=m
+CONFIG_PACKAGE_kmod-mt7996e=m
+CONFIG_PACKAGE_kmod-mwifiex-pcie=m
+CONFIG_PACKAGE_kmod-mwifiex-sdio=m
+CONFIG_PACKAGE_kmod-mwl8k=m
+CONFIG_PACKAGE_kmod-owl-loader=m
+CONFIG_PACKAGE_kmod-rsi91x=m
+CONFIG_PACKAGE_kmod-rsi91x-sdio=m
+CONFIG_PACKAGE_kmod-rsi91x-usb=m
+CONFIG_PACKAGE_kmod-rt2800-lib=m
+CONFIG_PACKAGE_kmod-rt2800-mmio=m
+CONFIG_PACKAGE_kmod-rt2800-pci=m
+CONFIG_PACKAGE_kmod-rt2800-usb=m
+CONFIG_PACKAGE_kmod-rt2x00-lib=m
 # CONFIG_PACKAGE_RT2X00_LIB_DEBUGFS is not set
 # CONFIG_PACKAGE_RT2X00_DEBUG is not set
-CONFIG_PACKAGE_kmod-rt2x00-mmio=y
-CONFIG_PACKAGE_kmod-rt2x00-pci=y
-CONFIG_PACKAGE_kmod-rt2x00-usb=y
-CONFIG_PACKAGE_kmod-rtl8192c-common=y
-CONFIG_PACKAGE_kmod-rtl8192ce=y
-CONFIG_PACKAGE_kmod-rtl8192cu=y
-CONFIG_PACKAGE_kmod-rtl8192de=y
-CONFIG_PACKAGE_kmod-rtl8192se=y
-CONFIG_PACKAGE_kmod-rtl8723bs=y
-CONFIG_PACKAGE_kmod-rtl8723du=y
-CONFIG_PACKAGE_kmod-rtl8812au-ac=y
-# CONFIG_PACKAGE_kmod-rtl8812au-ct is not set
-CONFIG_PACKAGE_kmod-rtl8821ae=y
-CONFIG_PACKAGE_kmod-rtl8821cu=y
-CONFIG_PACKAGE_kmod-rtl8822bu=y
-CONFIG_PACKAGE_kmod-rtl8822cu=y
-CONFIG_PACKAGE_kmod-rtl8xxxu=y
-CONFIG_PACKAGE_kmod-rtlwifi=y
+CONFIG_PACKAGE_kmod-rt2x00-mmio=m
+CONFIG_PACKAGE_kmod-rt2x00-pci=m
+CONFIG_PACKAGE_kmod-rt2x00-usb=m
+CONFIG_PACKAGE_kmod-rtl8192c-common=m
+CONFIG_PACKAGE_kmod-rtl8192ce=m
+CONFIG_PACKAGE_kmod-rtl8192cu=m
+CONFIG_PACKAGE_kmod-rtl8192de=m
+CONFIG_PACKAGE_kmod-rtl8192se=m
+CONFIG_PACKAGE_kmod-rtl8723bs=m
+CONFIG_PACKAGE_kmod-rtl8723du=m
+CONFIG_PACKAGE_kmod-rtl8812au-ac=m
+CONFIG_PACKAGE_kmod-rtl8812au-ct=m
+CONFIG_PACKAGE_kmod-rtl8821ae=m
+CONFIG_PACKAGE_kmod-rtl8821cu=m
+CONFIG_PACKAGE_kmod-rtl8822bu=m
+CONFIG_PACKAGE_kmod-rtl8822cu=m
+CONFIG_PACKAGE_kmod-rtl8xxxu=m
+CONFIG_PACKAGE_kmod-rtlwifi=m
 # CONFIG_PACKAGE_RTLWIFI_DEBUG is not set
-CONFIG_PACKAGE_kmod-rtlwifi-btcoexist=y
-CONFIG_PACKAGE_kmod-rtlwifi-pci=y
-CONFIG_PACKAGE_kmod-rtlwifi-usb=y
-CONFIG_PACKAGE_kmod-rtw88=y
+CONFIG_PACKAGE_kmod-rtlwifi-btcoexist=m
+CONFIG_PACKAGE_kmod-rtlwifi-pci=m
+CONFIG_PACKAGE_kmod-rtlwifi-usb=m
+CONFIG_PACKAGE_kmod-rtw88=m
 # CONFIG_PACKAGE_RTW88_DEBUG is not set
 # CONFIG_PACKAGE_RTW88_DEBUGFS is not set
-CONFIG_PACKAGE_kmod-rtw88-usb=y
-CONFIG_PACKAGE_kmod-wil6210=y
-CONFIG_PACKAGE_kmod-wl12xx=y
-CONFIG_PACKAGE_kmod-wl18xx=y
-CONFIG_PACKAGE_kmod-wlcore=y
+CONFIG_PACKAGE_kmod-rtw88-usb=m
+CONFIG_PACKAGE_kmod-wil6210=m
+CONFIG_PACKAGE_kmod-wl12xx=m
+CONFIG_PACKAGE_kmod-wl18xx=m
+CONFIG_PACKAGE_kmod-wlcore=m
 # end of Wireless Drivers
 # end of Kernel modules
 
@@ -4930,7 +4934,7 @@ CONFIG_PACKAGE_luci-app-socat=y
 # CONFIG_PACKAGE_luci-app-statistics is not set
 # CONFIG_PACKAGE_luci-app-syncdial is not set
 CONFIG_PACKAGE_luci-app-tailscale=y
-# CONFIG_PACKAGE_luci-app-telegrambot is not set
+CONFIG_PACKAGE_luci-app-telegrambot=y
 # CONFIG_PACKAGE_luci-app-tinyproxy is not set
 # CONFIG_PACKAGE_luci-app-transmission is not set
 # CONFIG_PACKAGE_luci-app-travelmate is not set
@@ -5147,6 +5151,7 @@ CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-tailscale-zh_Hans is not set
 # CONFIG_PACKAGE_luci-i18n-tailscale-zh_Hant is not set
+# CONFIG_PACKAGE_luci-i18n-telegrambot-ru is not set
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-ca is not set
@@ -6047,7 +6052,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_eapol-test-mbedtls is not set
 # CONFIG_PACKAGE_eapol-test-openssl is not set
 # CONFIG_PACKAGE_eapol-test-wolfssl is not set
-CONFIG_PACKAGE_hostapd=y
+# CONFIG_PACKAGE_hostapd is not set
 # CONFIG_PACKAGE_hostapd-basic is not set
 # CONFIG_PACKAGE_hostapd-basic-mbedtls is not set
 # CONFIG_PACKAGE_hostapd-basic-openssl is not set
@@ -6062,7 +6067,7 @@ CONFIG_PACKAGE_hostapd-utils=y
 # CONFIG_PACKAGE_hs20-common is not set
 # CONFIG_PACKAGE_hs20-server is not set
 CONFIG_PACKAGE_wpa-cli=y
-CONFIG_PACKAGE_wpa-supplicant=y
+CONFIG_PACKAGE_wpa-supplicant=m
 # CONFIG_WPA_RFKILL_SUPPORT is not set
 CONFIG_WPA_MSG_MIN_PRIORITY=3
 # CONFIG_WPA_WOLFSSL is not set
@@ -6080,7 +6085,7 @@ CONFIG_WPA_MBO_SUPPORT=y
 # CONFIG_PACKAGE_wpa-supplicant-openssl is not set
 # CONFIG_PACKAGE_wpa-supplicant-p2p is not set
 # CONFIG_PACKAGE_wpa-supplicant-wolfssl is not set
-# CONFIG_PACKAGE_wpad is not set
+CONFIG_PACKAGE_wpad=y
 # CONFIG_PACKAGE_wpad-basic is not set
 # CONFIG_PACKAGE_wpad-basic-mbedtls is not set
 # CONFIG_PACKAGE_wpad-basic-openssl is not set
