--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -61,6 +61,11 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
+    - name: Copy custom patch
+      run: |
+        cp patch/050-backport-6.1.patch openwrt/package/kernel/rtl8812au-ac/patches/
+        cat openwrt/package/kernel/rtl8812au-ac/patches/050-backport-6.1.patch
+
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
