--- a/.config
+++ b/.config
@@ -1837,7 +1837,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_nginx-mod-luci-ssl is not set
 # CONFIG_PACKAGE_nginx-util is not set
 # CONFIG_PACKAGE_tang is not set
-# CONFIG_PACKAGE_telegrambot is not set
+CONFIG_PACKAGE_telegrambot=y
 # end of Extra packages
 
 #
@@ -2790,7 +2790,7 @@ CONFIG_PACKAGE_kmod-rfkill=y
 # CONFIG_PACKAGE_kmod-serial-8250-exar is not set
 # CONFIG_PACKAGE_kmod-softdog is not set
 CONFIG_PACKAGE_kmod-ssb=y
-CONFIG_PACKAGE_kmod-thermal=m
+CONFIG_PACKAGE_kmod-thermal=y
 CONFIG_PACKAGE_kmod-tpm=y
 # CONFIG_PACKAGE_kmod-tpm-i2c-atmel is not set
 # CONFIG_PACKAGE_kmod-tpm-i2c-infineon is not set
@@ -2986,37 +2986,37 @@ CONFIG_PACKAGE_kmod-usb3=y
 #
 # Wireless Drivers
 #
-CONFIG_PACKAGE_kmod-ar5523=m
+CONFIG_PACKAGE_kmod-ar5523=y
 CONFIG_PACKAGE_kmod-ath=y
 CONFIG_ATH_USER_REGD=y
 # CONFIG_PACKAGE_ATH_DEBUG is not set
 CONFIG_PACKAGE_ATH_DFS=y
 # CONFIG_PACKAGE_ATH_DYNACK is not set
-CONFIG_PACKAGE_kmod-ath10k=m
+CONFIG_PACKAGE_kmod-ath10k=y
 CONFIG_ATH10K_LEDS=y
 CONFIG_ATH10K_THERMAL=y
-CONFIG_PACKAGE_kmod-ath10k-ct=m
+CONFIG_PACKAGE_kmod-ath10k-ct=y
 CONFIG_ATH10K-CT_LEDS=y
-CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=m
-CONFIG_PACKAGE_kmod-ath10k-pci=m
-CONFIG_PACKAGE_kmod-ath10k-sdio=m
-CONFIG_PACKAGE_kmod-ath10k-smallbuffers=m
-CONFIG_PACKAGE_kmod-ath11k=m
+CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=y
+CONFIG_PACKAGE_kmod-ath10k-pci=y
+CONFIG_PACKAGE_kmod-ath10k-sdio=y
+CONFIG_PACKAGE_kmod-ath10k-smallbuffers=y
+CONFIG_PACKAGE_kmod-ath11k=y
 CONFIG_ATH11K_THERMAL=y
-CONFIG_PACKAGE_kmod-ath11k-pci=m
-CONFIG_PACKAGE_kmod-ath5k=m
-CONFIG_PACKAGE_kmod-ath6kl=m
-CONFIG_PACKAGE_kmod-ath6kl-sdio=m
-CONFIG_PACKAGE_kmod-ath6kl-usb=m
+CONFIG_PACKAGE_kmod-ath11k-pci=y
+CONFIG_PACKAGE_kmod-ath5k=y
+CONFIG_PACKAGE_kmod-ath6kl=y
+CONFIG_PACKAGE_kmod-ath6kl-sdio=y
+CONFIG_PACKAGE_kmod-ath6kl-usb=y
 CONFIG_PACKAGE_kmod-ath9k=y
 CONFIG_ATH9K_HWRNG=y
 CONFIG_ATH9K_SUPPORT_PCOEM=y
 CONFIG_ATH9K_TX99=y
 CONFIG_PACKAGE_kmod-ath9k-common=y
-CONFIG_PACKAGE_kmod-ath9k-htc=m
-CONFIG_PACKAGE_kmod-b43=m
-CONFIG_PACKAGE_B43_USE_SSB=m
-CONFIG_PACKAGE_B43_USE_BCMA=m
+CONFIG_PACKAGE_kmod-ath9k-htc=y
+CONFIG_PACKAGE_kmod-b43=y
+CONFIG_PACKAGE_B43_USE_SSB=y
+CONFIG_PACKAGE_B43_USE_BCMA=y
 # CONFIG_B43_FW_4_150 is not set
 # CONFIG_B43_FW_4_178 is not set
 # CONFIG_B43_FW_5_10 is not set
@@ -3035,109 +3035,109 @@ CONFIG_PACKAGE_B43_PHY_G=y
 CONFIG_PACKAGE_B43_PHY_N=y
 CONFIG_PACKAGE_B43_PHY_LP=y
 CONFIG_PACKAGE_B43_PHY_HT=y
-CONFIG_PACKAGE_kmod-brcmfmac=m
+CONFIG_PACKAGE_kmod-brcmfmac=y
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
 CONFIG_BRCMFMAC_PCIE=y
-CONFIG_PACKAGE_kmod-brcmsmac=m
+CONFIG_PACKAGE_kmod-brcmsmac=y
 CONFIG_BRCMSMAC_USE_FW_FROM_WL=y
-CONFIG_PACKAGE_kmod-brcmutil=m
+CONFIG_PACKAGE_kmod-brcmutil=y
 # CONFIG_PACKAGE_BRCM80211_DEBUG is not set
-CONFIG_PACKAGE_kmod-carl9170=m
+CONFIG_PACKAGE_kmod-carl9170=y
 CONFIG_PACKAGE_kmod-cfg80211=y
 # CONFIG_PACKAGE_CFG80211_TESTMODE is not set
-CONFIG_PACKAGE_kmod-iwlwifi=m
+CONFIG_PACKAGE_kmod-iwlwifi=y
 # CONFIG_PACKAGE_IWLWIFI_DEBUG is not set
 # CONFIG_PACKAGE_IWLWIFI_DEBUGFS is not set
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_MAC80211_DEBUGFS=y
 # CONFIG_PACKAGE_MAC80211_TRACING is not set
 CONFIG_PACKAGE_MAC80211_MESH=y
-CONFIG_PACKAGE_kmod-mac80211-hwsim=m
-CONFIG_PACKAGE_kmod-mt76=m
-CONFIG_PACKAGE_kmod-mt76-connac=m
-CONFIG_PACKAGE_kmod-mt76-core=m
-CONFIG_PACKAGE_kmod-mt76-sdio=m
-CONFIG_PACKAGE_kmod-mt76-usb=m
-CONFIG_PACKAGE_kmod-mt7601u=m
-CONFIG_PACKAGE_kmod-mt7603=m
-CONFIG_PACKAGE_kmod-mt7615-common=m
-CONFIG_PACKAGE_kmod-mt7615-firmware=m
-CONFIG_PACKAGE_kmod-mt7615e=m
-CONFIG_PACKAGE_kmod-mt7622-firmware=m
-CONFIG_PACKAGE_kmod-mt7663-firmware-ap=m
-CONFIG_PACKAGE_kmod-mt7663-firmware-sta=m
-CONFIG_PACKAGE_kmod-mt7663-usb-sdio=m
-CONFIG_PACKAGE_kmod-mt7663s=m
-CONFIG_PACKAGE_kmod-mt7663u=m
-CONFIG_PACKAGE_kmod-mt76x0-common=m
-CONFIG_PACKAGE_kmod-mt76x02-common=m
-CONFIG_PACKAGE_kmod-mt76x02-usb=m
-CONFIG_PACKAGE_kmod-mt76x0e=m
-CONFIG_PACKAGE_kmod-mt76x0u=m
-CONFIG_PACKAGE_kmod-mt76x2=m
-CONFIG_PACKAGE_kmod-mt76x2-common=m
-CONFIG_PACKAGE_kmod-mt76x2u=m
-CONFIG_PACKAGE_kmod-mt7915-firmware=m
-CONFIG_PACKAGE_kmod-mt7915e=m
-CONFIG_PACKAGE_kmod-mt7916-firmware=m
-CONFIG_PACKAGE_kmod-mt7921-common=m
-CONFIG_PACKAGE_kmod-mt7921-firmware=m
-CONFIG_PACKAGE_kmod-mt7921e=m
-CONFIG_PACKAGE_kmod-mt7921s=m
-CONFIG_PACKAGE_kmod-mt7921u=m
-CONFIG_PACKAGE_kmod-mt7922-firmware=m
-CONFIG_PACKAGE_kmod-mt7925-common=m
-CONFIG_PACKAGE_kmod-mt7925e=m
-CONFIG_PACKAGE_kmod-mt7925u=m
-CONFIG_PACKAGE_kmod-mt792x-common=m
-CONFIG_PACKAGE_kmod-mt792x-usb=m
-CONFIG_PACKAGE_kmod-mt7996-firmware=m
-CONFIG_PACKAGE_kmod-mt7996e=m
-CONFIG_PACKAGE_kmod-mwifiex-pcie=m
-CONFIG_PACKAGE_kmod-mwifiex-sdio=m
-CONFIG_PACKAGE_kmod-mwl8k=m
-CONFIG_PACKAGE_kmod-owl-loader=m
-CONFIG_PACKAGE_kmod-rsi91x=m
-CONFIG_PACKAGE_kmod-rsi91x-sdio=m
-CONFIG_PACKAGE_kmod-rsi91x-usb=m
-CONFIG_PACKAGE_kmod-rt2800-lib=m
-CONFIG_PACKAGE_kmod-rt2800-mmio=m
-CONFIG_PACKAGE_kmod-rt2800-pci=m
-CONFIG_PACKAGE_kmod-rt2800-usb=m
-CONFIG_PACKAGE_kmod-rt2x00-lib=m
+CONFIG_PACKAGE_kmod-mac80211-hwsim=y
+CONFIG_PACKAGE_kmod-mt76=y
+CONFIG_PACKAGE_kmod-mt76-connac=y
+CONFIG_PACKAGE_kmod-mt76-core=y
+CONFIG_PACKAGE_kmod-mt76-sdio=y
+CONFIG_PACKAGE_kmod-mt76-usb=y
+CONFIG_PACKAGE_kmod-mt7601u=y
+CONFIG_PACKAGE_kmod-mt7603=y
+CONFIG_PACKAGE_kmod-mt7615-common=y
+CONFIG_PACKAGE_kmod-mt7615-firmware=y
+CONFIG_PACKAGE_kmod-mt7615e=y
+CONFIG_PACKAGE_kmod-mt7622-firmware=y
+CONFIG_PACKAGE_kmod-mt7663-firmware-ap=y
+CONFIG_PACKAGE_kmod-mt7663-firmware-sta=y
+CONFIG_PACKAGE_kmod-mt7663-usb-sdio=y
+CONFIG_PACKAGE_kmod-mt7663s=y
+CONFIG_PACKAGE_kmod-mt7663u=y
+CONFIG_PACKAGE_kmod-mt76x0-common=y
+CONFIG_PACKAGE_kmod-mt76x02-common=y
+CONFIG_PACKAGE_kmod-mt76x02-usb=y
+CONFIG_PACKAGE_kmod-mt76x0e=y
+CONFIG_PACKAGE_kmod-mt76x0u=y
+CONFIG_PACKAGE_kmod-mt76x2=y
+CONFIG_PACKAGE_kmod-mt76x2-common=y
+CONFIG_PACKAGE_kmod-mt76x2u=y
+CONFIG_PACKAGE_kmod-mt7915-firmware=y
+CONFIG_PACKAGE_kmod-mt7915e=y
+CONFIG_PACKAGE_kmod-mt7916-firmware=y
+CONFIG_PACKAGE_kmod-mt7921-common=y
+CONFIG_PACKAGE_kmod-mt7921-firmware=y
+CONFIG_PACKAGE_kmod-mt7921e=y
+CONFIG_PACKAGE_kmod-mt7921s=y
+CONFIG_PACKAGE_kmod-mt7921u=y
+CONFIG_PACKAGE_kmod-mt7922-firmware=y
+CONFIG_PACKAGE_kmod-mt7925-common=y
+CONFIG_PACKAGE_kmod-mt7925e=y
+CONFIG_PACKAGE_kmod-mt7925u=y
+CONFIG_PACKAGE_kmod-mt792x-common=y
+CONFIG_PACKAGE_kmod-mt792x-usb=y
+CONFIG_PACKAGE_kmod-mt7996-firmware=y
+CONFIG_PACKAGE_kmod-mt7996e=y
+CONFIG_PACKAGE_kmod-mwifiex-pcie=y
+CONFIG_PACKAGE_kmod-mwifiex-sdio=y
+CONFIG_PACKAGE_kmod-mwl8k=y
+CONFIG_PACKAGE_kmod-owl-loader=y
+CONFIG_PACKAGE_kmod-rsi91x=y
+CONFIG_PACKAGE_kmod-rsi91x-sdio=y
+CONFIG_PACKAGE_kmod-rsi91x-usb=y
+CONFIG_PACKAGE_kmod-rt2800-lib=y
+CONFIG_PACKAGE_kmod-rt2800-mmio=y
+CONFIG_PACKAGE_kmod-rt2800-pci=y
+CONFIG_PACKAGE_kmod-rt2800-usb=y
+CONFIG_PACKAGE_kmod-rt2x00-lib=y
 # CONFIG_PACKAGE_RT2X00_LIB_DEBUGFS is not set
 # CONFIG_PACKAGE_RT2X00_DEBUG is not set
-CONFIG_PACKAGE_kmod-rt2x00-mmio=m
-CONFIG_PACKAGE_kmod-rt2x00-pci=m
-CONFIG_PACKAGE_kmod-rt2x00-usb=m
-CONFIG_PACKAGE_kmod-rtl8192c-common=m
-CONFIG_PACKAGE_kmod-rtl8192ce=m
-CONFIG_PACKAGE_kmod-rtl8192cu=m
-CONFIG_PACKAGE_kmod-rtl8192de=m
-CONFIG_PACKAGE_kmod-rtl8192se=m
-CONFIG_PACKAGE_kmod-rtl8723bs=m
-CONFIG_PACKAGE_kmod-rtl8723du=m
-CONFIG_PACKAGE_kmod-rtl8812au-ac=m
-CONFIG_PACKAGE_kmod-rtl8812au-ct=m
-CONFIG_PACKAGE_kmod-rtl8821ae=m
-CONFIG_PACKAGE_kmod-rtl8821cu=m
-CONFIG_PACKAGE_kmod-rtl8822bu=m
-CONFIG_PACKAGE_kmod-rtl8822cu=m
-CONFIG_PACKAGE_kmod-rtl8xxxu=m
-CONFIG_PACKAGE_kmod-rtlwifi=m
+CONFIG_PACKAGE_kmod-rt2x00-mmio=y
+CONFIG_PACKAGE_kmod-rt2x00-pci=y
+CONFIG_PACKAGE_kmod-rt2x00-usb=y
+CONFIG_PACKAGE_kmod-rtl8192c-common=y
+CONFIG_PACKAGE_kmod-rtl8192ce=y
+CONFIG_PACKAGE_kmod-rtl8192cu=y
+CONFIG_PACKAGE_kmod-rtl8192de=y
+CONFIG_PACKAGE_kmod-rtl8192se=y
+CONFIG_PACKAGE_kmod-rtl8723bs=y
+CONFIG_PACKAGE_kmod-rtl8723du=y
+CONFIG_PACKAGE_kmod-rtl8812au-ac=y
+# CONFIG_PACKAGE_kmod-rtl8812au-ct is not set
+CONFIG_PACKAGE_kmod-rtl8821ae=y
+CONFIG_PACKAGE_kmod-rtl8821cu=y
+CONFIG_PACKAGE_kmod-rtl8822bu=y
+CONFIG_PACKAGE_kmod-rtl8822cu=y
+CONFIG_PACKAGE_kmod-rtl8xxxu=y
+CONFIG_PACKAGE_kmod-rtlwifi=y
 # CONFIG_PACKAGE_RTLWIFI_DEBUG is not set
-CONFIG_PACKAGE_kmod-rtlwifi-btcoexist=m
-CONFIG_PACKAGE_kmod-rtlwifi-pci=m
-CONFIG_PACKAGE_kmod-rtlwifi-usb=m
-CONFIG_PACKAGE_kmod-rtw88=m
+CONFIG_PACKAGE_kmod-rtlwifi-btcoexist=y
+CONFIG_PACKAGE_kmod-rtlwifi-pci=y
+CONFIG_PACKAGE_kmod-rtlwifi-usb=y
+CONFIG_PACKAGE_kmod-rtw88=y
 # CONFIG_PACKAGE_RTW88_DEBUG is not set
 # CONFIG_PACKAGE_RTW88_DEBUGFS is not set
-CONFIG_PACKAGE_kmod-rtw88-usb=m
-CONFIG_PACKAGE_kmod-wil6210=m
-CONFIG_PACKAGE_kmod-wl12xx=m
-CONFIG_PACKAGE_kmod-wl18xx=m
-CONFIG_PACKAGE_kmod-wlcore=m
+CONFIG_PACKAGE_kmod-rtw88-usb=y
+CONFIG_PACKAGE_kmod-wil6210=y
+CONFIG_PACKAGE_kmod-wl12xx=y
+CONFIG_PACKAGE_kmod-wl18xx=y
+CONFIG_PACKAGE_kmod-wlcore=y
 # end of Wireless Drivers
 # end of Kernel modules
 
@@ -3584,15 +3584,16 @@ CONFIG_RUST_SCCACHE_DIR=""
 #
 # Compression
 #
-# CONFIG_PACKAGE_libbz2 is not set
+CONFIG_PACKAGE_libbz2=y
 # CONFIG_PACKAGE_liblz4 is not set
-# CONFIG_PACKAGE_liblzma is not set
+CONFIG_PACKAGE_liblzma=y
 # CONFIG_PACKAGE_libunrar is not set
 # CONFIG_PACKAGE_libzip-gnutls is not set
 # CONFIG_PACKAGE_libzip-mbedtls is not set
 # CONFIG_PACKAGE_libzip-nossl is not set
 # CONFIG_PACKAGE_libzip-openssl is not set
-# CONFIG_PACKAGE_libzstd is not set
+CONFIG_PACKAGE_libzstd=y
+CONFIG_ZSTD_OPTIMIZE_O3=y
 # end of Compression
 
 #
@@ -4660,7 +4661,7 @@ CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci=y
 CONFIG_PACKAGE_libuci-lua=y
 # CONFIG_PACKAGE_libuci2 is not set
-# CONFIG_PACKAGE_libucl is not set
+CONFIG_PACKAGE_libucl=y
 CONFIG_PACKAGE_libuclient=y
 # CONFIG_PACKAGE_libudev-zero is not set
 # CONFIG_PACKAGE_libudns is not set
@@ -6346,7 +6347,7 @@ CONFIG_PACKAGE_smartdns=y
 # CONFIG_PACKAGE_snmp-utils is not set
 # CONFIG_PACKAGE_snmpd is not set
 # CONFIG_PACKAGE_snmptrapd is not set
-# CONFIG_PACKAGE_socat is not set
+CONFIG_PACKAGE_socat=y
 # CONFIG_SOCAT_SSL is not set
 # CONFIG_PACKAGE_softflowd is not set
 # CONFIG_PACKAGE_soloscli is not set
@@ -6476,13 +6477,21 @@ CONFIG_PACKAGE_uboot-envtools=y
 #
 # CONFIG_PACKAGE_bsdtar is not set
 # CONFIG_PACKAGE_bsdtar-noopenssl is not set
-# CONFIG_PACKAGE_bzip2 is not set
-# CONFIG_PACKAGE_gzip is not set
+CONFIG_PACKAGE_bzip2=y
+CONFIG_PACKAGE_gzip=y
 # CONFIG_PACKAGE_lz4 is not set
 # CONFIG_PACKAGE_pigz is not set
 # CONFIG_PACKAGE_unrar is not set
-# CONFIG_PACKAGE_unzip is not set
-# CONFIG_PACKAGE_xz-utils is not set
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_xz-utils=y
+# CONFIG_PACKAGE_lzmadec is not set
+# CONFIG_PACKAGE_lzmainfo is not set
+CONFIG_PACKAGE_xz=y
+# CONFIG_PACKAGE_xzdec is not set
+# CONFIG_PACKAGE_xzdiff is not set
+# CONFIG_PACKAGE_xzgrep is not set
+# CONFIG_PACKAGE_xzless is not set
+# CONFIG_PACKAGE_xzmore is not set
 # CONFIG_PACKAGE_zipcmp is not set
 # CONFIG_PACKAGE_zipmerge is not set
 # CONFIG_PACKAGE_ziptool is not set
@@ -6550,7 +6559,7 @@ CONFIG_PACKAGE_partx-utils=y
 # CONFIG_PACKAGE_jupp is not set
 # CONFIG_PACKAGE_mg is not set
 # CONFIG_PACKAGE_nano is not set
-# CONFIG_PACKAGE_nano-full is not set
+CONFIG_PACKAGE_nano-full=y
 # CONFIG_PACKAGE_nano-plus is not set
 # CONFIG_PACKAGE_vim is not set
 # CONFIG_PACKAGE_vim-full is not set
@@ -7025,7 +7034,7 @@ CONFIG_PACKAGE_openssl-util=y
 # CONFIG_PACKAGE_sane-daemon is not set
 # CONFIG_PACKAGE_sane-frontends is not set
 # CONFIG_PACKAGE_secilc is not set
-# CONFIG_PACKAGE_sed is not set
+CONFIG_PACKAGE_sed=y
 # CONFIG_PACKAGE_selinux-audit2allow is not set
 # CONFIG_PACKAGE_selinux-chcat is not set
 # CONFIG_PACKAGE_selinux-semanage is not set
@@ -7065,7 +7074,13 @@ CONFIG_STRACE_NONE=y
 # CONFIG_PACKAGE_sysrepocfg is not set
 # CONFIG_PACKAGE_sysrepoctl is not set
 # CONFIG_PACKAGE_sysstat is not set
-# CONFIG_PACKAGE_tar is not set
+CONFIG_PACKAGE_tar=y
+# CONFIG_PACKAGE_TAR_POSIX_ACL is not set
+# CONFIG_PACKAGE_TAR_XATTR is not set
+CONFIG_PACKAGE_TAR_BZIP2=y
+CONFIG_PACKAGE_TAR_GZIP=y
+CONFIG_PACKAGE_TAR_XZ=y
+CONFIG_PACKAGE_TAR_ZSTD=y
 # CONFIG_PACKAGE_taskset is not set
 # CONFIG_PACKAGE_taskwarrior is not set
 # CONFIG_PACKAGE_telegraf is not set
@@ -7089,7 +7104,7 @@ CONFIG_STRACE_NONE=y
 # CONFIG_PACKAGE_uledd is not set
 # CONFIG_PACKAGE_unix2dos is not set
 # CONFIG_PACKAGE_unshare is not set
-# CONFIG_PACKAGE_upx is not set
+CONFIG_PACKAGE_upx=y
 CONFIG_PACKAGE_usb-modeswitch=y
 # CONFIG_PACKAGE_usbids is not set
 # CONFIG_PACKAGE_usbutils is not set
@@ -7101,10 +7116,10 @@ CONFIG_PACKAGE_v2dat=y
 # CONFIG_PACKAGE_view1090 is not set
 # CONFIG_PACKAGE_viewadsb is not set
 # CONFIG_PACKAGE_watchcat is not set
-# CONFIG_PACKAGE_whereis is not set
-# CONFIG_PACKAGE_which is not set
+CONFIG_PACKAGE_whereis=y
+CONFIG_PACKAGE_which=y
 # CONFIG_PACKAGE_whiptail is not set
-# CONFIG_PACKAGE_whois is not set
+CONFIG_PACKAGE_whois=y
 # CONFIG_PACKAGE_wifitoggle is not set
 # CONFIG_PACKAGE_wipe is not set
 # CONFIG_PACKAGE_xsltproc is not set
