--- a/.config
+++ b/.config
@@ -3012,7 +3012,7 @@ CONFIG_ATH10K_LEDS=y
 CONFIG_ATH10K_THERMAL=y
 CONFIG_PACKAGE_kmod-ath10k-ct=y
 CONFIG_ATH10K-CT_LEDS=y
-CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=y
+# CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers is not set
 CONFIG_PACKAGE_kmod-ath10k-pci=y
 CONFIG_PACKAGE_kmod-ath10k-sdio=y
 CONFIG_PACKAGE_kmod-ath10k-smallbuffers=y
@@ -6370,7 +6370,7 @@ CONFIG_PACKAGE_smartdns=y
 # CONFIG_PACKAGE_snmp-utils is not set
 # CONFIG_PACKAGE_snmpd is not set
 # CONFIG_PACKAGE_snmptrapd is not set
-CONFIG_PACKAGE_socat=y
+# CONFIG_PACKAGE_socat is not set
 # CONFIG_SOCAT_SSL is not set
 # CONFIG_PACKAGE_softflowd is not set
 # CONFIG_PACKAGE_soloscli is not set
