--- a/.config
+++ b/.config
@@ -246,8 +246,8 @@ CONFIG_SHADOW_PASSWORDS=y
 #
 # Kernel build options
 #
-CONFIG_KERNEL_BUILD_USER=""
-CONFIG_KERNEL_BUILD_DOMAIN=""
+CONFIG_KERNEL_BUILD_USER="Spring"
+CONFIG_KERNEL_BUILD_DOMAIN="SpringWRT"
 CONFIG_KERNEL_PRINTK=y
 CONFIG_KERNEL_SWAP=y
 # CONFIG_KERNEL_PROC_STRIPPED is not set
