--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -118,10 +118,10 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
 
 
-    - name: Copy custom patch
-      run: |
-        cp patch/050-backport-6.1.patch openwrt/package/kernel/rtl8812au-ac/patches/
-        cat openwrt/package/kernel/rtl8812au-ac/patches/050-backport-6.1.patch
+ #   - name: Copy custom patch
+ #     run: |
+ #       cp patch/050-backport-6.1.patch openwrt/package/kernel/rtl8812au-ac/patches/
+ #       cat openwrt/package/kernel/rtl8812au-ac/patches/050-backport-6.1.patch
 
     - name: Load custom feeds
       run: |
