--- a/.config
+++ b/.config
@@ -177,7 +177,7 @@ CONFIG_DRIVER_11AC_SUPPORT=y
 CONFIG_WPA_MBO_SUPPORT=y
 CONFIG_PACKAGE_wpad=y
 CONFIG_PACKAGE_wireless-tools=y
-CONFIG_PACKAGE_iw=y
+CONFIG_PACKAGE_iw-full=y
 
 # Linux Tools
 CONFIG_PACKAGE_nano-full=y
